--- a/App Interaktive Karte/index.html
+++ b/App Interaktive Karte/index.html
@@ -426,50 +426,57 @@ function animTo(target, duration = 350) {
   }
   
 function computeTransformForPin(id, scale) {
-  const c = getPinCenter(id);
-  if (!c) return null;
+  const c = getPinCenter(id);
+  if (!c) return null;
 
-  const rect = wrapEl.getBoundingClientRect();
-  const viewCx = rect.width  / 2;
-  const viewCy = rect.height / 2;
+  const rect = wrapEl.getBoundingClientRect();
+  const viewCx = rect.width / 2;
+  const viewCy = rect.height / 2;
 
-  // Wunschposition: Pin-Mittelpunkt exakt ins Zentrum
-  let x = viewCx - c.cx * scale;
-  let y = viewCy - c.cy * scale;
+  // 1. Berechne die gewünschte Pan-Position.
+  // Pan-Wert ist der Unterschied zwischen Viewport-Mitte und dem skalierten Pin-Mittelpunkt.
+  const x = viewCx - (c.cx * scale);
+  const y = viewCy - (c.cy * scale);
 
-  const mapW = MAP_W * scale;
-  const mapH = MAP_H * scale;
+  const mapW = MAP_W * scale;
+  const mapH = MAP_H * scale;
 
-  // kleine Sicherheitskante (optional)
-  const BLEED = 8;
+  // 2. Bounding (Begrenzung): Stelle sicher, dass die Karte nicht aus dem Sichtfeld rutscht.
+  let minX, maxX, minY, maxY;
+  
+  // Begrenzung für X
+  if (mapW >= rect.width) {
+    // Karte ist breiter als der Viewport
+    minX = rect.width - mapW;
+    maxX = 0;
+  } else {
+    // Karte ist schmaler, zentriere sie
+    minX = maxX = (rect.width - mapW) / 2;
+  }
 
-  // --- X: Bounds berechnen ---
-  let minX, maxX;
-  if (mapW >= rect.width) {
-    // Karte größer → klassisch zwischen (rechts bündig) und (links bündig)
-    minX = rect.width - mapW - BLEED; // maximal nach links verschoben
-    maxX = 0 + BLEED;                 // maximal nach rechts verschoben
-  } else {
-    // Karte kleiner → exakt mittig "einklemmen"
-    const centerX = (rect.width - mapW) / 2;
-    minX = maxX = centerX;            // kein Drift, immer mittig
-  }
-  x = Math.min(maxX, Math.max(minX, x));
+  // Begrenzung für Y
+  if (mapH >= rect.height) {
+    // Karte ist höher als der Viewport
+    minY = rect.height - mapH;
+    maxY = 0;
+  } else {
+    // Karte ist kürzer, zentriere sie
+    minY = maxY = (rect.height - mapH) / 2;
+  }
 
-  // --- Y: Bounds berechnen ---
-  let minY, maxY;
-  if (mapH >= rect.height) {
-    minY = rect.height - mapH - BLEED;
-    maxY = 0 + BLEED;
-  } else {
-    const centerY = (rect.height - mapH) / 2;
-    minY = maxY = centerY;
-  }
-  y = Math.min(maxY, Math.max(minY, y));
+  // 3. Klammere die berechneten Pan-Werte, damit sie innerhalb der Grenzen bleiben.
+  // Eine kleine Pufferzone (BLEED) kann die Animation weicher machen.
+  const BLEED = 10;
+  const finalX = clamp(x, minX - BLEED, maxX + BLEED);
+  const finalY = clamp(y, minY - BLEED, maxY + BLEED);
 
-  return { x, y, scale };
+  return { x: finalX, y: finalY, scale };
 }
 
+// Hilfsfunktion zum Begrenzen eines Werts
+function clamp(value, min, max) {
+  return Math.max(min, Math.min(value, max));
+}
 
 function fitAndCenter(xPercent = START_X_PERCENT) {
   if (!panzoomInstance) return;
@@ -1012,6 +1019,7 @@ function getPinCenter(id) {
 </script>
 </body>
 </html>
+
 
 
 
