--- a/App Interaktive Karte/index.html
+++ b/App Interaktive Karte/index.html
@@ -526,7 +526,6 @@ function showMap(focusId = null) {
         duration: 350,
         easing: 'ease-in-out'
       });
-
       // Desktop: Mausrad-Zoom
       wrapEl.addEventListener('wheel', (e) => {
         e.preventDefault();
@@ -559,14 +558,32 @@ function showMap(focusId = null) {
     // 5) Transformation anwenden
     if (targetTf) {
       // ✅ Korrigierte Methode für Panzoom v4.x
-      panzoomInstance.pan(targetTf.x, targetTf.y, { animate: true });
-      panzoomInstance.zoom(targetTf.scale, { animate: true });
+      panzoomInstance.pan(targetTf.x, targetTf.y, { animate: true, duration: 350 });
+      panzoomInstance.zoom(targetTf.scale, { animate: true, duration: 350 });
       
       console.log(`🔍 Fokus auf ${id} → x:${Math.round(targetTf.x)} y:${Math.round(targetTf.y)} s:${targetTf.scale.toFixed(2)}`);
     } else {
       console.warn(`[MAP] Konnte Pin ${id} nicht fokussieren.`);
     }
   }); // waitForImage
+}
+
+// Überarbeitete Funktion: Entfernung der unnötigen Begrenzung.
+function computeTransformForPin(id, scale) {
+  const c = getPinCenter(id);
+  if (!c) return null;
+
+  const rect = wrapEl.getBoundingClientRect();
+  const viewCx = rect.width / 2;
+  const viewCy = rect.height / 2;
+
+  // Pan-Werte sind der Unterschied zwischen der Mitte des Viewports
+  // und dem skalierten Pin-Mittelpunkt.
+  const x = viewCx - (c.cx * scale);
+  const y = viewCy - (c.cy * scale);
+  
+  // Panzoom übernimmt die Begrenzung, wir müssen nur die reinen Werte liefern
+  return { x, y, scale };
 }
   
   /* ====== LISTE & DATEN ====== */
@@ -974,6 +991,7 @@ function getPinCenter(id) {
 </script>
 </body>
 </html>
+
 
 
 
