--- a/App Interaktive Karte/index.html
+++ b/App Interaktive Karte/index.html
@@ -556,21 +556,40 @@ function showMap(focusId = null) {
     const targetTf = id ? computeTransformForPin(id, targetScale) : { ...fit, scale: minScale };
     
     // 5) Transformation anwenden
-    if (targetTf) {
-      // ✅ Korrigierte Methode: Pan-Befehl separat aufrufen
-      panzoomInstance.pan(targetTf.x, targetTf.y, { animate: true, duration: 350 });
-      
-      // ✅ Verzögerung: Zoom-Befehl mit einer kleinen Pause aufrufen
-      // Dies stellt sicher, dass Panzoom den Pan-Befehl verarbeitet,
-      // bevor der Zoom-Befehl eintrifft.
-      setTimeout(() => {
-        panzoomInstance.zoom(targetTf.scale, { animate: true, duration: 350 });
-      }, 50); // 50 Millisekunden Verzögerung
+// ... in der showMap() Funktion
+if (targetTf) {
+  // ✅ KORREKTUR: Panzoom die Arbeit überlassen
+  // 1. Hole die Mittelpunkt-Koordinaten des Pins
+  const pinCenter = getPinCenter(id);
 
-      console.log(`🔍 Fokus auf ${id} → x:${Math.round(targetTf.x)} y:${Math.round(targetTf.y)} s:${targetTf.scale.toFixed(2)}`);
-    } else {
-      console.warn(`[MAP] Konnte Pin ${id} nicht fokussieren.`);
-    }
+  if (pinCenter) {
+    // 2. Rufe die Panzoom-interne Funktion zum Fokussieren auf
+    // Wir übergeben die Ziel-Skalierung, die Mauskoordinaten (die Mitte des Pins)
+    // und die Mitte des Viewports, um dorthin zu zentrieren.
+    panzoomInstance.zoomToPoint(
+      targetTf.scale,
+      pinCenter.cx,
+      pinCenter.cy,
+      {
+        animate: true,
+        duration: 350,
+        easing: 'ease-in-out',
+        // Optional: Die Mitte des Viewports
+        force: true
+      }
+    );
+  } else {
+    // Fallback, wenn Pin nicht gefunden wurde
+    panzoomInstance.pan(targetTf.x, targetTf.y, { animate: true, duration: 350 });
+    setTimeout(() => {
+      panzoomInstance.zoom(targetTf.scale, { animate: true, duration: 350 });
+    }, 50);
+  }
+
+  console.log(`🔍 Fokus auf ${id} → s:${targetTf.scale.toFixed(2)}`);
+} else {
+  console.warn(`[MAP] Konnte Pin ${id} nicht fokussieren.`);
+}
   }); // waitForImage
 }
 
@@ -997,6 +1016,7 @@ function getPinCenter(id) {
 </script>
 </body>
 </html>
+
 
 
 
