--- a/App Interaktive Karte/index.html
+++ b/App Interaktive Karte/index.html
@@ -551,45 +551,31 @@ function showMap(focusId = null) {
       clearHighlight();
     }
 
-    // 4) Transformation berechnen
+    // 4) Pin-Mittelpunkt und Ziel-Skalierung bestimmen
     const targetScale = Math.max(minScale, TARGET_SCALE);
-    const targetTf = id ? computeTransformForPin(id, targetScale) : { ...fit, scale: minScale };
+    const pinCenter = id ? getPinCenter(id) : null;
     
     // 5) Transformation anwenden
-// ... in der showMap() Funktion
-if (targetTf) {
-  // ✅ KORREKTUR: Panzoom die Arbeit überlassen
-  // 1. Hole die Mittelpunkt-Koordinaten des Pins
-  const pinCenter = getPinCenter(id);
-
-  if (pinCenter) {
-    // 2. Rufe die Panzoom-interne Funktion zum Fokussieren auf
-    // Wir übergeben die Ziel-Skalierung, die Mauskoordinaten (die Mitte des Pins)
-    // und die Mitte des Viewports, um dorthin zu zentrieren.
-    panzoomInstance.zoomToPoint(
-      targetTf.scale,
-      pinCenter.cx,
-      pinCenter.cy,
-      {
-        animate: true,
-        duration: 350,
-        easing: 'ease-in-out',
-        // Optional: Die Mitte des Viewports
-        force: true
-      }
-    );
-  } else {
-    // Fallback, wenn Pin nicht gefunden wurde
-    panzoomInstance.pan(targetTf.x, targetTf.y, { animate: true, duration: 350 });
-    setTimeout(() => {
-      panzoomInstance.zoom(targetTf.scale, { animate: true, duration: 350 });
-    }, 50);
-  }
-
-  console.log(`🔍 Fokus auf ${id} → s:${targetTf.scale.toFixed(2)}`);
-} else {
-  console.warn(`[MAP] Konnte Pin ${id} nicht fokussieren.`);
-}
+    if (pinCenter) {
+        // Ruft Panzooms eigene Funktion auf, um zu einem Punkt zu zoomen
+        panzoomInstance.zoomToPoint(
+            targetScale,
+            pinCenter.cx,
+            pinCenter.cy,
+            {
+                animate: true,
+                duration: 350,
+                easing: 'ease-in-out'
+            }
+        );
+        console.log(`🔍 Fokus auf ${id} → cx:${Math.round(pinCenter.cx)} cy:${Math.round(pinCenter.cy)} s:${targetScale.toFixed(2)}`);
+    } else {
+        // Fallback: Wenn kein Pin gefunden wurde, auf Standardansicht zurücksetzen
+        const fit = computeFit(START_X_PERCENT);
+        panzoomInstance.setOptions({ startX: fit.x, startY: fit.y, startScale: fit.scale });
+        panzoomInstance.reset({ animate: true });
+        console.warn(`[MAP] Konnte Pin ${id} nicht zentrieren. Setze auf Standardansicht zurück.`);
+    }
   }); // waitForImage
 }
 
@@ -1016,6 +1002,7 @@ function getPinCenter(id) {
 </script>
 </body>
 </html>
+
 
 
 
