--- a/App Interaktive Karte/index.html
+++ b/App Interaktive Karte/index.html
@@ -551,30 +551,25 @@ function showMap(focusId = null) {
       clearHighlight();
     }
 
-    // 4) Pin-Mittelpunkt und Ziel-Skalierung bestimmen
+    // 4) Transformation berechnen
     const targetScale = Math.max(minScale, TARGET_SCALE);
-    const pinCenter = id ? getPinCenter(id) : null;
+    const targetTf = id ? computeTransformForPin(id, targetScale) : { ...fit, scale: minScale };
     
     // 5) Transformation anwenden
-    if (pinCenter) {
-        // Ruft Panzooms eigene Funktion auf, um zu einem Punkt zu zoomen
-        panzoomInstance.zoomToPoint(
-            targetScale,
-            pinCenter.cx,
-            pinCenter.cy,
-            {
-                animate: true,
-                duration: 350,
-                easing: 'ease-in-out'
-            }
-        );
-        console.log(`🔍 Fokus auf ${id} → cx:${Math.round(pinCenter.cx)} cy:${Math.round(pinCenter.cy)} s:${targetScale.toFixed(2)}`);
+    if (targetTf) {
+      // ✅ Korrigierte Methode: Pan-Befehl separat aufrufen
+      panzoomInstance.pan(targetTf.x, targetTf.y, { animate: true, duration: 350 });
+      
+      // ✅ Verzögerung: Zoom-Befehl mit einer kleinen Pause aufrufen
+      // Dies stellt sicher, dass Panzoom den Pan-Befehl verarbeitet,
+      // bevor der Zoom-Befehl eintrifft.
+      setTimeout(() => {
+        panzoomInstance.zoom(targetTf.scale, { animate: true, duration: 350 });
+      }, 50); // 50 Millisekunden Verzögerung
+
+      console.log(`🔍 Fokus auf ${id} → x:${Math.round(targetTf.x)} y:${Math.round(targetTf.y)} s:${targetTf.scale.toFixed(2)}`);
     } else {
-        // Fallback: Wenn kein Pin gefunden wurde, auf Standardansicht zurücksetzen
-        const fit = computeFit(START_X_PERCENT);
-        panzoomInstance.setOptions({ startX: fit.x, startY: fit.y, startScale: fit.scale });
-        panzoomInstance.reset({ animate: true });
-        console.warn(`[MAP] Konnte Pin ${id} nicht zentrieren. Setze auf Standardansicht zurück.`);
+      console.warn(`[MAP] Konnte Pin ${id} nicht fokussieren.`);
     }
   }); // waitForImage
 }
@@ -1005,6 +1000,7 @@ function getPinCenter(id) {
 </script>
 </body>
 </html>
+
 
 
 
