--- a/App Interaktive Karte/index.html
+++ b/App Interaktive Karte/index.html
@@ -431,20 +431,18 @@ function computePinLocation(id) {
     const minScale = fit.scale;
     currentMinScale = minScale;
 
-    // 2) Panzoom initialisieren (falls noch nicht geschehen)
-    if (!panzoomInstance) {
+if (!panzoomInstance) {
       panzoomInstance = Panzoom(mapEl, {
         contain: 'outside',
         maxScale: 4,
-        minScale: minScale, // Die korrekte Mindestskalierung von Anfang an festlegen
+        minScale: minScale,
         startScale: fit.scale,
         startX: fit.x,
         startY: fit.y,
         animate: true,
         duration: 350,
-        easing: 'ease-in-out'
-        disableZoom: true
-      });
+        easing: 'ease-in-out',
+        disableZoom: true // 
 
       // Desktop: Mausrad-Zoom hinzufügen. Touch-Gesten werden automatisch von Panzoom verarbeitet.
       wrapEl.addEventListener('wheel', (e) => {
@@ -1111,6 +1109,7 @@ function getPinCenter(id) {
 </script>
 </body>
 </html>
+
 
 
 
